--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@ body {
     background: rgb(36,0,33);
 background: linear-gradient(90deg, rgba(36,0,33,1) 0%, rgba(121,9,107,1) 35%, rgba(0,212,255,1) 100%);
 }
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    font-size: 40px;
+    color: white;
+    gap: 28px;
+    text-transform: uppercase;
+}
